# projekt_1

./: .gitignore  CMakeLists.txt
inc/: CMakeLists.txt  fileTransfer.hh  queueList.hh  socketConnection.hh  stackList.hh  stackNode.hh  stos_tablica.hh
src/: fileTransfer.cpp  main.cpp  main.cpp.save  queueStack.cpp  socketConnection.cpp  stos_tablica.cpp
tests/: CMakeLists.txt  test1.cpp
tests/inc/: stackList.hh
tests/tests_data/: test1_data.txt
